--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_activity_launch">Android Puzzle</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="choice_img">Choix de l\'image</string>
+    <string name="hello">Hello World, FileExplore!</string>
 
 </resources>
